# cogsi2425-1211066-1250515-1181754-1220638

./: README.md
C4/: README.md
C4/Vagrant/.vagrant/machines/default/virtualbox/: action_provision  id  index_uuid  synced_folders
C4/Vagrant/h2-data/: h2db.lock.db
CA1/: README.md
CA1/spring-framework-petclinic/src/main/java/org/springframework/samples/petclinic/model/: Vet.java
CA1/spring-framework-petclinic/src/main/resources/db/h2/: data.sql  schema.sql
CA1/spring-framework-petclinic/src/main/webapp/WEB-INF/jsp/vets/: vetList.jsp
CA1/spring-framework-petclinic/src/main/webapp/resources/css/: petclinic.css
CA1/spring-framework-petclinic/src/test/java/org/springframework/samples/petclinic/web/: VetControllerTests.java
CA2/: README.md
CA2/PART_1/: README.md
CA2/PART_1/gradle_basic_demo-main/: build.gradle
CA2/PART_1_BAZEL/: .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE
CA2/PART_1_BAZEL/scripts/: run_server.bat  run_server.ps1
CA2/PART_2/: README.md
CA2/PART_2/ca2-part2/app/: build.gradle
CA2/PART_2/ca2-part2/app/gradle/: docs.gradle
CA2/PART_2_BAZEL/: README.md
CA2/PART_2_BAZEL/tut-rest/: .gitignore  BUILD.bazel  WORKSPACE  deploy_dev.sh  install_dist.sh  run_app.sh
CA2/PART_2_BAZEL/tut-rest/src/integration-test/java/payroll/: EmployeeIntegrationTest.java
CA2/PART_2_BAZEL/tut-rest/src/main/resources/: application.properties
CA3/: README.md
CA3/PART_1/: README.md
CA3/PART_1/Vagrant/: Vagrantfile  provision.sh
CA3/PART_1/Vagrant/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
CA3/PART_1/Vagrant/.vagrant/machines/part2/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
CA3/PART_1/Vagrant/h2-data/: h2db.mv.db
CA3/PART_1/Vagrant/scripts/: build-app.sh  git-clone.sh  install-dependecies.sh  setup-h2-persistence.sh  start-services.sh
CA3/PART_1/ca2-part2/: settings.gradle
CA3/PART_1/ca2-part2/app/: build.gradle
CA3/PART_1/ca2-part2/app/gradle/: integration-test.gradle
CA3/PART_1/gradle_basic_demo-main/: build.gradle
CA3/PART_1_MULTIPASS/: README.md  cloud-init.yaml  provision.sh  run-provision.ps1  setup.ps1
CA3/PART_1_MULTIPASS/scripts/: build-app.sh  git-clone.sh  install-dependencies.sh  setup-h2-persistence.sh  start-spring.sh
CA3/PART_2/: README.md
CA3/PART_2/Vagrant/: Vagrantfile
CA3/PART_2/Vagrant/.vagrant/machines/app/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders
CA3/PART_2/Vagrant/.vagrant/machines/db/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders
CA3/PART_2/Vagrant/scripts/: build-app.sh  configure-remote-db.sh  git-clone.sh  install-dependencies.sh  provision-app.sh  provision-db.sh  setup-h2-server.sh  start-app.sh  wait-for-db.sh
CA3/PART_2/ca2-part2/app/gradle/: deployment.gradle
CA3/PART_2_MULTIPASS/: .gitignore  README.md
CA3/PART_2_MULTIPASS/scripts/: deploy.ps1  setup-app.sh  setup-db.sh
CA4/: README.MD  README.md
CA4/ANSIBLE/: README.md
CA4/ANSIBLE/Vagrant/: Vagrantfile
CA4/ANSIBLE/ansible/: playbook.yml
CA4/ANSIBLE/ansible/roles/app/tasks/: build-and-run.yml  health-check.yml  install-dependencies.yml  main.yml
CA4/ANSIBLE/ansible/roles/common/tasks/: main.yml  users-groups.yml
CA4/ANSIBLE/ansible/roles/db/tasks/: health-check.yml  install-dependencies.yml  main.yml
CA4/ANSIBLE/ansible/roles/pam_password_policy/tasks/: main.yml
CA4/ANSIBLE/ansible/roles/pam_password_policy/templates/: faillock.conf.j2  pwquality.conf.j2
CA4/ANSIBLE/ca2-part2/app/gradle/: docs.gradle  integration-test.gradle  run-dist.gradle
CA4/ANSIBLE/ca2-part2/app/src/integrationTest/java/payroll/: EmployeeIntegrationTest.java
CA4/ANSIBLE/ca2-part2/app/src/main/resources/: application.properties
CA4/CA4_Part1_Puppet_Bolt/: .gitignore  README.md
CA4/CA4_Part1_Puppet_Bolt/Vagrant/: Vagrantfile
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/: bolt-defaults.yaml  bolt-project.yaml  bolt_rsa_key  bolt_rsa_key.pub  inventory.yaml
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/application/manifests/: init.pp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/application/tasks/: setup.json  setup.sh
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/application/templates/: application.properties.epp  springboot.service.epp  wait-for-db.sh.epp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/common/manifests/: init.pp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/common/tasks/: setup.json  setup.sh
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/common/templates/: faillock.conf.epp  pwquality.conf.epp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/database/manifests/: init.pp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/database/tasks/: setup.json  setup.sh
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/modules/healthcheck/tasks/: check_app.json  check_app.sh  check_db.json  check_db.sh
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/plans/: deploy.pp  healthcheck.pp
CA4/CA4_Part1_Puppet_Bolt/puppet_bolt/tasks/healthcheck/: check_app.json  check_app.sh  check_db.json  check_db.sh
CA4/Vagrant/: Vagrantfile
CA4/ansible/: hosts.ini  playbook.yml
CA4/ansible/roles/app/tasks/: build-and-run.yml  git-clone.yml  main.yml
CA4/ansible/roles/app/vars/: main.yml
CA4/ansible/roles/common/tasks/: users-groups.yml
CA4/ansible/roles/db/tasks/: install-dependencies.yml  main.yml
CA4/ca2-part2/app/src/main/resources/: application.properties
CA5/DOCKER/PART_1/: README.md
CA5/DOCKER/PART_1/ChatApp/: v1.Dockerfile  v2.Dockerfile  v2.multistage.Dockerfile
CA5/DOCKER/PART_1/ChatApp/gradle_basic_demo-main/: build.gradle
CA5/DOCKER/PART_1/ChatApp/gradle_basic_demo-main/src/test/java/basic_demo/: ChatClientTest.java
CA5/DOCKER/PART_2/: README.md  db.Dockerfile  docker-compose.yml  web.Dockerfile
CA5/DOCKER/PART_2/ca2-part2/app/src/main/resources/: application.properties
