# BUILD.bazel

# Compile the chat application library
java_library(
    name = "chat_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

# Server binary
java_binary(
    name = "chat_server",
    main_class = "basic_demo.ChatServerApp",
    runtime_deps = [":chat_lib"],
)

# Client binary
java_binary(
    name = "chat_client",
    main_class = "basic_demo.ChatClient",
    runtime_deps = [":chat_lib"],
)